@@ -1,5 +1,17 @@
 2004-12-13  Michael Koch  <konqueror@gmx.de>
 
+	* javax/swing/JLayeredPane.java
+	(getLayer): Fixed return type, made public.
+	(getPosition): Use new getLayer().
+	(SetPosition): Likewise.
+	(getIndexOf): Likewise.
+	(remove): Likewise.
+	* javax/swing/JInternalFrame.java
+	(getLayer): Use new JLayeredPane.getLayer().
+
+
+2004-12-13  Michael Koch  <konqueror@gmx.de>
+
 	* javax/swing/table/TableColumn.java: Added/fixed javadocs over all.
 	(setHeaderValue): Simplified. Do nothing when old value == new value.
 
